less/site.less
@import "overrides";
@import "tooltip";

.im-table {
    @spacer: 1em;
    @highlightcolor: cornflowerblue;
    @drag-color: #337ab7; //why isn't "fabulous and glittery" a colour?
    @histogram-bars: #0058a6;
    @histogram-bg: aliceblue;
    min-height: 200px;
    padding-bottom: 40px;

    .no-value {
        font-weight: bold;
        color: #666;
        font-family: "Fira Mono", "DejaVu Sans Mono", Menlo, Consolas, "Liberation Mono", Monaco, "Lucida Console", monospace;
        background-color: #ddd;
        border-radius: 2px;
        padding: 1px 2px;
    }

    .fade-enter {
        opacity: 0.01;
    }

    .fade-enter.fade-enter-active {
        opacity: 1;
        transition: opacity 50ms ease-in;
    }

    .fade-leave {
        opacity: 1;
    }

    .fade-leave.fade-leave-active {
        opacity: 0.01;
        transition: opacity 50ms ease-in;
    }

    .fade-appear {
        opacity: 0.01;
    }

    .fade-appear.fade-appear-active {
        opacity: 1;
        transition: opacity 50ms ease-in;
    }

    .relative {
        position: relative;
    }

    .summary-table {
        font-size: 0.9em;
    }

    .table-bordered > tbody > tr > td,
    .table-bordered > tbody > tr > th,
    .table-bordered > tfoot > tr > td,
    .table-bordered > tfoot > tr > th,
    .table-bordered > thead > tr > td,
    .table-bordered > thead > tr > th {
        &.drag-left {
            border-left: 5px solid @drag-color;
        }

        &.drag-right {
            border-right: 5px solid @drag-color;
        }
    }

    .drag-right {
        border-right: 3px solid red;
    }

    .overlay {
        background-color: white;
        position: absolute;
        top: 0;
        left: 0;
        z-index: 999;
        width: 100%;
        height: 100%;
        opacity: 0.95;
        display: flex;
        color: black;
        align-items: center;
        justify-content: center;
    }

    .column-summary .main-view,
    .filter-view {
        max-height: 60vh;
        overflow-y: scroll;
    }
    .column-summary-toolbar {
      box-shadow: 0px -1px 1px rgba(0,0,0,0.35);
      padding:@spacer/4;
      display:flex;
      justify-content:flex-end;
      background-color:#ddd;
      margin-left:0px;
    }

    .square-view {
        .collection {
            background-color: aliceblue;
            border-radius: 5px;
            margin: 10px;
            padding: 10px;
            display: flex;
            justify-content: center;
            align-items: center;
            text-align: center;
            border: 1px solid transparent;
            // min-width: 75px;
            &:hover {
                border: 1px solid blue;
            }
        }
    }

    .no-select {
        -webkit-touch-callout: none;
        /* iOS Safari */
        -webkit-user-select: none;
        /* Chrome/Safari/Opera */
        -khtml-user-select: none;
        /* Konqueror */
        -moz-user-select: none;
        /* Firefox */
        -ms-user-select: none;
        /* Internet Explorer/Edge */
        user-select: none;
        /* Non-prefixed version, currently
                                  not supported by any browser */
    }

    .tree-view {
        cursor: pointer;

        .selected {
            background-color: green;
        }

        .padme {
            padding: 2px;
            border-radius: 3px;
        }
    }

    ul.tree-view {
        margin-left: 35px;
    }

    ul.tree-view i {
        padding-right: 5px;
    }

    .inline-filter {
        display: flex;
        align-items: stretch;

        input {
            border-radius: 0;
            border-width: 1px 1px 1px 0;
        }

        .fa {
            width: 2em;
            text-align: center;
            border: solid 1px #ccc;
            line-height: 2em;
            display: block;
        }
        background-color: #ededed;
    }

    .no-histogram {
        padding: @spacer/4;
        text-align: center;
        background-color: #ccc;
        color: #333;
    }

    .histogram {
        width: 100%;
        max-width: 50vw;
        height: 50px; //if you change this value, change it in src/views/graphs.cljs too
        background-color: @histogram-bg;
        display: flex;
        align-items: flex-end;
    }

    .histo-bar {
        background-color: @histogram-bars;
        width: 12px;
        border-right: solid 1px @histogram-bg;
    }

    .dropdown-right {
        right: 100%;
        left: auto;
    }

    .summary-toolbar {
        vertical-align: top;
        display: inline-block;
        white-space: nowrap;

        .dropdown-menu {
            min-width: 35vw;
            padding:0;
        }

        .filter-icon.active-filter {
            color: @highlightcolor;
            text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
        }

        & > * {
            padding: 2px;
        }
    }

    .dropdown-menu {
        animation-duration: 0.4s;
        animation-name: fadein;
        transition-timing-function: ease-in;
        @keyframes fadein {
            from {
                opacity: 0.1;
            }

            to {
                opacity: 1;
            }
        }
        padding-top: 0;
        font-weight: normal;
        white-space: normal;

        .alert {
            h4 {
                font-size: 1em;
                line-height: 1.2em;
                padding: 0;
                margin: 0;
            }
            border-radius: 0;
            font-size: 0.9em;
            padding: @spacer/4;
            margin: 0;
        }

        .table-condensed > tbody > tr > td,
        .table-condensed > tbody > tr > th,
        .table-condensed > tfoot > tr > td,
        .table-condensed > tfoot > tr > th,
        .table-condensed > thead > tr > td,
        .table-condensed > thead > tr > th {
            padding: 4px;
        }
    }

    .more-below {
        /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&0+0,0.65+100 */
        background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%);
        /* FF3.6-15 */
        background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
        /* Chrome10-25,Safari5.1-6 */
        background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
        /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr=  '#00000000', endColorstr='#a6000000',GradientType=0 );
        /* IE6-9 */
        position: fixed;
        bottom: 0;
        left: 0;
    }

    .mostly-transparent {
        opacity: 0.2;
    }

    .max-height-400 {
        max-height: 350px;
        overflow-y: scroll;
    }

    .min-width-250 {
        min-width: 250px;
    }

    .cell {
        position: relative;

        &:hover {
            background-color: #e8e8f0;
            transition: background-color 200ms;
        }
    }

    .hoverable:hover {
        background-color: #e8e8f0;
        transition: background-color 200ms;
    }

    .wrapper {
        -webkit-transform: translateZ(0);
        /* webkit flicker fix */
        -webkit-font-smoothing: antialiased;
        /* webkit text rendering fix */
    }

    .wrapper .tooltip {
        background: white;
        bottom: 100%;
        display: block;
        left: -25px;
        margin-bottom: 15px;
        opacity: 0;
        padding: 20px;
        pointer-events: none;
        position: absolute;
        width: 100%;
        -webkit-transform: translateY(10px);
        -moz-transform: translateY(10px);
        -ms-transform: translateY(10px);
        -o-transform: translateY(10px);
        transform: translateY(10px);
        -webkit-transition: all 0.25s ease-out;
        -moz-transition: all 0.25s ease-out;
        -ms-transition: all 0.25s ease-out;
        -o-transition: all 0.25s ease-out;
        transition: all 0.25s ease-out;
        -webkit-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
        -moz-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
        -ms-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
        -o-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
        box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.28);
    }
    /* This bridges the gap so you can mouse into the tooltip without it disappearing */
    .wrapper .tooltip:before {
        bottom: -20px;
        content: " ";
        display: block;
        height: 20px;
        left: 0;
        position: absolute;
        width: 100%;
    }
    /* CSS Triangles - see Trevor's post */
    .wrapper .tooltip:after {
        border-left: solid transparent 10px;
        border-right: solid transparent 10px;
        border-top: solid white 10px;
        bottom: -10px;
        content: " ";
        height: 0;
        left: 50%;
        margin-left: -13px;
        position: absolute;
        width: 0;
    }

    .wrapper:hover .tooltip {
        opacity: 1;
        pointer-events: auto;
        -webkit-transform: translateY(0px);
        -moz-transform: translateY(0px);
        -ms-transform: translateY(0px);
        -o-transform: translateY(0px);
        transform: translateY(0px);
    }
    /* IE can just show/hide with no transition */
    .lte8 .wrapper .tooltip {
        display: none;
    }

    .lte8 .wrapper:hover .tooltip {
        display: block;
    }

    .ontop {
        background-color: @highlightcolor;
    }
}

